--- a/blog-index.html
+++ b/blog-index.html
@@ -9,21 +9,63 @@
 
     <body id="bg">
 
-        <nav class="navbar fixed-top navbar-dark">
+        <nav class="navbar navbar-dark">
             <a class="navbar-brand" href="#">Unequivocally Gratuitous Entries&plusmn</a>
         </nav>
 
+        <!--Welcome-->
         <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
+            <h1 class="display-3">Hello, world!</h1>
             <p class="lead">This is blog of stories.</p>
             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
             <hr class="my-4">
         </div>
-        
+
+        <!--Entries & Tag-->
         <div class="container">
             <div class="row">
-              <div class="col-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-              <div class="col-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                <div class="col">
+                    <h1>Entries</h1>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-5" id="section-post">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                </div>
+                <div class="col-5">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  
+                  </div>
+              <div class="col-2">
+                  <h4>About</h4>
+                  <p>Lorem ipsum dolor sit amet</p>
+
+              </div>
+            </div>
+            <hr>
+            <!--Footer-->
+            <div class="row">
+                <div class="col">
+                    <h3>Socials</h3>
+                    <ul class="list-unstyled">
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Github</li>
+                        <li>Tumblr</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Contact</h3>
+                    <ul class="list-unstyled">
+                        <li>Email</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    Something Else?
+                </div>
+            </div>
+
         </div>
 
 
