Updated entries and side sectional

--- a/blog-index.html
+++ b/blog-index.html
@@ -14,35 +14,62 @@
         </nav>
 
         <!--Welcome-->
-        <div class="jumbotron">
-            <h1 class="display-3">Hello, world!</h1>
-            <p class="lead">This is blog of stories.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            <hr class="my-4">
+        <div class="container">
+            <div class="jumbotron">
+                <h1 class="display-3">Hello, world!</h1>
+                <p class="lead">This is blog of stories.</p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <hr>
+            </div>
         </div>
-
         <!--Entries & Tag-->
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <h1>Entries</h1>
-                </div>
+                    <h1 id="entries-title">Entries</h1>
             </div>
             <div class="row">
-              <div class="col-5" id="section-post">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="col-5" id="section-post">
+                    <h3 class="font-italic font-weight-lighter">The Girl on the Bus</h3> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <br>
+                    <br>
+                    Longingly, <br>
+                    <i>B.</i>
+                    </p>
 
                 </div>
+                <div class="col-5">
+                    <h3 class="font-italic font-weight-lighter">A Surprise</h3>    
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <br>
+                    <br>
+                    With love, <br>
+                    <i>P.</i>
+                    </p>
+
+                  </div>
+              <div class="col-2">
+                <h4 class="font-italic">About</h4>
+                <p>Lorem ipsum dolor sit amet</p>
+                <h4 class="font-italic">Archives</h4>
+                <ol class="list-unstyled mb-0">
+                  <li><a href="#">March 2014</a></li>
+                  <li><a href="#">February 2014</a></li>
+                  <li><a href="#">January 2014</a></li>
+                  <li><a href="#">More back then</a></li>
+                </ol>
+              </div>
+            </div>
+            <div class="row">
                 <div class="col-5">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   
                   </div>
-              <div class="col-2">
-                  <h4>About</h4>
-                  <p>Lorem ipsum dolor sit amet</p>
-
+                  <div class="col-5">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    
+                    </div>
               </div>
-            </div>
             <hr>
             <!--Footer-->
             <div class="row">
