added email sign up section, added first entry(The Girl on the Bus)!, updated about section

--- a/blog-index.html
+++ b/blog-index.html
@@ -16,21 +16,41 @@
         <!--Welcome-->
         <div class="container">
             <div class="jumbotron">
-                <h1 class="display-3">Hello, world!</h1>
+                <h1 class="display-3">Hi, welcome!</h1>
                 <p class="lead">This is blog of stories.</p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
                 <hr>
             </div>
         </div>
+        <!--Email Sign Up-->
+        <div class="container">
+            <div class="row justify-content-center">
+                    <h2>Stay connected for more stories and updates.</h2>
+            </div>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-8">
+                    <form>
+                        <div class="form-group">
+                        <label for="exampleFormControlInput1">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name_lorem@example.com">
+                        </div>
+                        <input class="btn btn-primary" type="submit" value="Submit">
+                    </form>
+                </div>
+                <div class="col"></div>
+            </div>
+            <hr>
+        </div>
+        
         <!--Entries & Tag-->
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-around">
                     <h1 id="entries-title">Entries</h1>
             </div>
             <div class="row">
                 <div class="col-5" id="section-post">
                     <h3 class="font-italic font-weight-lighter">The Girl on the Bus</h3> 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <p>On Mondays and Wednesdays, I take route 50 and on Tuesdays and Thursdays, I take route 54 or 56 depending on me waking up to my annoying honking of an alarm clock. Fridays though. Fridays, I wake up more than on time. I do the works. The product-ed, yet semi-organized, tousled hair and the light usage of the chocolate body spray. I want to emphasize on light usage, I’m not a monster who showers in body spray. Anyways, Fridays, I take route 33. Or I like to call the route to my heart. I need to invest in pencils. But I love pens far too much or maybe I’m a person who commits to small stuff. Or maybe I’m afraid to to leave. Oh, I’m getting sidetracked again, sorry about that Journal. I think this was a year ago. I remember missing route 50 on a random Friday. I was just rushing to this bus on route 33. Running and waving in hopes the bus driver would notice me before just leaving me; that was miserable, running. I barely made it and I thank the driver somewhere in my gasping. I reached for my pockets and realized I forgot my wallet. It could not get any worse. It got better, way better. A girl. No, a woman got onto the bus and respectfully scootched aside my defeated standing to pay the fare for me and herself. I was in awe. I don’t think anyone’s done anything for lowly ol’ me. There were barely any seats, but it felt like destiny when the last two remaining seats were across from each other. She sat down with earbuds in and her arms on her purse while her hands held a book and a journal. We have so much alike already. I read. I have a journal. I never thought my Fridays could feel more Friday than ever.
                     <br>
                     <br>
                     Longingly, <br>
@@ -50,7 +70,7 @@
                   </div>
               <div class="col-2">
                 <h4 class="font-italic">About</h4>
-                <p>Lorem ipsum dolor sit amet</p>
+                <p>This is a not-so-secret place where some stories are made and remembered</p>
                 <h4 class="font-italic">Archives</h4>
                 <ol class="list-unstyled mb-0">
                   <li><a href="#">March 2014</a></li>
@@ -78,7 +98,6 @@
                     <ul class="list-unstyled">
                         <li>Facebook</li>
                         <li>Twitter</li>
-                        <li>Github</li>
                         <li>Tumblr</li>
                     </ul>
                 </div>
