--- a/blog-index.html
+++ b/blog-index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-5">
                     <h3 class="font-italic font-weight-lighter">A Surprise</h3>    
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <p>I am so ready. I got the cake, the clown, and the cast to come. Oh and I got the weird submarine person he absolutely loves for some reason. Maybe one day I'll try to get into it. Anyways, I am gonna go to bed now. Got an early day tomorrow while he's out with the boys. I'll let you know how it goes tomorrow. 
                     <br>
                     <br>
                     With love, <br>
