added third entry, "The Interview"

--- a/blog-index.html
+++ b/blog-index.html
@@ -82,7 +82,55 @@
             </div>
             <div class="row">
                 <div class="col-5">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h3 class="font-italic font-weight-lighter">The Interview</h3>
+                    <p>“Em, are you seriously gonna record this?” 
+                        <br>
+                        “Yes, babe. I am serious. It’s for class, okay?”
+                        <br>
+                        He sighed. “Okay, okay. I love you, too.”
+                        <br>
+                        “Hehe. Yep.” As she smirks.
+                        <br>
+                        <br>
+                        “So, what do we gotta do?”
+                        <br>
+                        “Well. I just gotta say some word and you just say what first pops up. No thinking. Just quick response. No lying either or else it won’t be beneficial.”
+                        <br>
+                        “Okay, I think I’ve done this before. Probably. Totally.”
+                        <br>
+                        She then excitedly grabs her paper and pencil. “Hereeeeee we go. Color?”
+                        <br>
+                        <br>
+                        “Black.”
+                        <br>
+                        She scribbles. “Food?”
+                        <br>
+                        “Rice.”
+                        <br>
+                        “Pets?”
+                        <br>
+                        “Dogs.”
+                        <br>
+                        “Place of living?”
+                        <br>
+                        “Apartment.”
+                        <br>
+                        “Marriage?”
+                        <br>
+                        “Later.”
+                        <br>
+                        “Children?”
+                        <br>
+                        “Gross.”
+                        <br>
+                        “Okay, I think I’m done.” She quickly grabs her phone and even quicker leaves the room.”
+                        <br>
+                        “Babe, wait, what’s goi-”
+                        <br>
+                        <br>
+                        Recording <br>
+                        <i>E.</i>
+                        </p>
   
                   </div>
                   <div class="col-5">
