Editted for accuracy in Archives, adjusted entries

--- a/blog-index.html
+++ b/blog-index.html
@@ -59,29 +59,6 @@
 
                 </div>
                 <div class="col-5">
-                    <h3 class="font-italic font-weight-lighter">A Surprise</h3>    
-                    <p>I am so ready. I got the cake, the clown, and the cast to come. Oh and I got the weird submarine person he absolutely loves for some reason. Maybe one day I'll try to get into it. Anyways, I am gonna go to bed now. Got an early day tomorrow while he's out with the boys. I'll let you know how it goes tomorrow. 
-                    <br>
-                    <br>
-                    With love, <br>
-                    <i>P.</i>
-                    </p>
-
-                  </div>
-              <div class="col-2">
-                <h4 class="font-italic">About</h4>
-                <p>This is a not-so-secret place where some stories are made and remembered</p>
-                <h4 class="font-italic">Archives</h4>
-                <ol class="list-unstyled mb-0">
-                  <li><a href="#">March 2014</a></li>
-                  <li><a href="#">February 2014</a></li>
-                  <li><a href="#">January 2014</a></li>
-                  <li><a href="#">More back then</a></li>
-                </ol>
-              </div>
-            </div>
-            <div class="row">
-                <div class="col-5">
                     <h3 class="font-italic font-weight-lighter">The Interview</h3>
                     <p>“Em, are you seriously gonna record this?” 
                         <br>
@@ -131,6 +108,30 @@
                         Recording <br>
                         <i>E.</i>
                         </p>
+
+                  </div>
+              <div class="col-2">
+                <h4 class="font-italic">About</h4>
+                <p>This is a not-so-secret place where some stories are made and remembered</p>
+                <h4 class="font-italic">Archives</h4>
+                <ol class="list-unstyled mb-0">
+                  <li><a href="#">July 2020</a></li>
+                  <li><a href="#">August 2020</a></li>
+                  <li><a href="#">September 2020</a></li>
+                  <li><a href="#"><i>More</i></a></li>
+                </ol>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-5">
+                    <h3 class="font-italic font-weight-lighter">A Surprise</h3>    
+                    <p>I am so ready. I got the cake, the clown, and the cast to come. Oh and I got the weird submarine person he absolutely loves for some reason. Maybe one day I'll try to get into it. Anyways, I am gonna go to bed now. Got an early day tomorrow while he's out with the boys. I'll let you know how it goes tomorrow. 
+                    <br>
+                    <br>
+                    With love, <br>
+                    <i>P.</i>
+                    </p>
+                    
   
                   </div>
                   <div class="col-5">
