Added The Mother Entry

--- a/blog-index.html
+++ b/blog-index.html
@@ -135,7 +135,12 @@
   
                   </div>
                   <div class="col-5">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h3 class="font-italic font-weight-lighter">The Mother</h3> 
+                    <p>I am writing this because Ms.Haynes told me to. Mother told me to take out the trash to the usual alley. I did it. I went back home and I saw the neighbors yelling at each other. Now Im writing in this journal that Ms. Haynes told me to do. I dont know how to end this. 
+                    <br>
+                    <br>
+                    <i>G.</i>
+                    </p>
     
                     </div>
               </div>
