--- a/blog-index.html
+++ b/blog-index.html
@@ -50,6 +50,7 @@
             <div class="row">
                 <div class="col-5" id="section-post">
                     <h3 class="font-italic font-weight-lighter">The Girl on the Bus</h3> 
+                    <h5 class="font-italic font-weight-lighter">(Date)July 6th, 2020</h5>
                     <p>On Mondays and Wednesdays, I take route 50 and on Tuesdays and Thursdays, I take route 54 or 56 depending on me waking up to my annoying honking of an alarm clock. Fridays though. Fridays, I wake up more than on time. I do the works. The product-ed, yet semi-organized, tousled hair and the light usage of the chocolate body spray. I want to emphasize on <i>light</i> usage, I’m not a monster who showers in body spray. Anyways, Fridays, I take route 33. <s>Or I like to call the route to my heart.</s> I need to invest in pencils. But I love pens far too much or maybe I’m a person who commits to small stuff. Or maybe I’m afraid to to leave. Oh, I’m getting sidetracked again, sorry about that Journal. I think this was a year ago. I remember missing route 50 on a random Friday. I was just rushing to this bus on route 33. Running and waving in hopes the bus driver would notice me before just leaving me; that was miserable, running. I barely made it and I thank the driver somewhere in my gasping. I reached for my pockets and realized I forgot my wallet. It could not get any worse. It got better, way better. A girl. No, a woman got onto the bus and respectfully scootched aside my defeated standing to pay the fare for me and herself. I was in awe. I don’t think anyone’s done anything for lowly ol’ me. There were barely any seats, but it felt like destiny when the last two remaining seats were across from each other. She sat down with earbuds in and her arms on her purse while her hands held a book and a journal. We have so much alike already. I read. I have a journal. I never thought my Fridays could feel more Friday than ever.
                     <br>
                     <br>
@@ -60,6 +61,7 @@
                 </div>
                 <div class="col-5">
                     <h3 class="font-italic font-weight-lighter">The Interview</h3>
+                    <h5 class="font-italic font-weight-lighter">(Date)July 8th, 2020</h5>
                     <p>“Em, are you seriously gonna record this?” 
                         <br>
                         “Yes, babe. I am serious. It’s for class, okay?”
@@ -124,7 +126,8 @@
             </div>
             <div class="row">
                 <div class="col-5">
-                    <h3 class="font-italic font-weight-lighter">A Surprise</h3>    
+                    <h3 class="font-italic font-weight-lighter">A Surprise</h3> 
+                    <h5 class="font-italic font-weight-lighter">(Date)July 7th, 2020</h5>   
                     <p>I am so ready. I got the cake, the clown, and the cast to come. Oh and I got the weird submarine person he absolutely loves for some reason. Maybe one day I'll try to get into it. Anyways, I am gonna go to bed now. Got an early day tomorrow while he's out with the boys. I'll let you know how it goes tomorrow. 
                     <br>
                     <br>
@@ -135,7 +138,8 @@
   
                   </div>
                   <div class="col-5">
-                    <h3 class="font-italic font-weight-lighter">The Mother</h3> 
+                    <h3 class="font-italic font-weight-lighter">The Mother</h3>
+                    <h5 class="font-italic font-weight-lighter">(Date)July 12th, 2020</h5> 
                     <p>I am writing this because Ms.Haynes told me to. Mother told me to take out the trash to the usual alley. I did it. I went back home and I saw the neighbors yelling at each other. Now Im writing in this journal that Ms. Haynes told me to do. I dont know how to end this. 
                     <br>
                     <br>
