added search btn; moved email signup towards bottom(consider different color); WIP JS search functions

--- a/blog-index.html
+++ b/blog-index.html
@@ -26,12 +26,17 @@
             </div>
         </div>
         
-        <!--Entries & Tag-->
+        <!--Section Header-->
         <div class="container">
 
             <div class="row justify-content-around">
-                    <h1 id="entries-title">Entries</h1>
+                <h1 id="entries-title">Entries</h1>
             </div>
+
+        </div>
+
+        <!--Entries & Tag-->
+        <div class="container" id="entries-section">
 
             <div class="row">
                 <div class="col-5" id="section-post-1">
@@ -110,6 +115,7 @@
                 </ol>
                 <br>
                 <input id="search-title" type="text" placeholder="Entry Title">
+                <button class="btn btn-secondary" type="submit" id="search-btn">Search</button>
               </div>
             </div>
             <div class="row">
@@ -139,9 +145,9 @@
             <hr>
 
              <!--Email Sign Up-->
-        <div class="container">
+        <div class="container" id="email-bg">
             <div class="row justify-content-center">
-                    <h2>Stay connected for more stories and updates.</h2>
+                    <h2>Stay connected with us.</h2>
             </div>
             <div class="row">
                 <div class="col"></div>
